--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -1,4 +1,4 @@
-name: Build and deploy Jekyll site to GitHub Pages
+name: Build and deploy to Github Pages
 
 on:
   push:
@@ -6,18 +6,10 @@ on:
       - master
 
 jobs:
-  github-pages:
+  jekyll:
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
-
-      - uses: actions/cache@v1
-        with:
-          path: vendor/bundle
-          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-gems-
-
-      - uses: helaili/jekyll-action@2.0.1
+      - uses: helaili/jekyll-action@2.0.2
         env:
           JEKYLL_PAT: ${{ secrets.JEKYLL_PAT }}
