Remove references to HTTP/2

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Tuft - HTTP/2 web framework for Node.js
+title: Tuft - a Node.js web framework
 url: https://www.tuft.dev
 author: Stuart Kennedy
 
