--- a/_data/benchmarks/results.yml
+++ b/_data/benchmarks/results.yml
@@ -1,64 +1,197 @@
 - name: 'Node native'
-  result: '89,772'
+  result: '23,617'
   data: |-
-    finished in 90.01s, 89771.67 req/s, 4.11MB/s
-    requests: 5386300 total, 5386300 started, 5386300 done, 5386300 succeeded, 0 failed, 0 errored, 0 timeout
-    status codes: 5385000 2xx, 0 3xx, 0 4xx, 0 5xx
-    traffic: 246.65MB (258631715) total, 61.74MB (64737210) headers (space savings 91.64%), 100.00MB (104852800) data
-                          min         max         mean         sd        +/- sd
-    time for request:    75.23ms    180.33ms    111.41ms     15.11ms    72.11%
-    time for connect:        0us         0us         0us         0us     0.00%
-    time to 1st byte:        0us         0us         0us         0us     0.00%
-    req/s           :     833.24      981.65      897.66       58.21    51.00%
+    Concurrency Level:      100
+    Time taken for tests:   4.234 seconds
+    Complete requests:      100000
+    Failed requests:        0
+    Keep-Alive requests:    100000
+    Total transferred:      15500000 bytes
+    HTML transferred:       1400000 bytes
+    Requests per second:    23617.18 [#/sec] (mean)
+    Time per request:       4.234 [ms] (mean)
+    Time per request:       0.042 [ms] (mean, across all concurrent requests)
+    Transfer rate:          3574.87 [Kbytes/sec] received
+
+    Connection Times (ms)
+                  min  mean[+/-sd] median   max
+    Connect:        0    0   0.0      0       2
+    Processing:     0    4   0.8      4      21
+    Waiting:        0    4   0.8      4      21
+    Total:          0    4   0.8      4      21
+
+    Percentage of the requests served within a certain time (ms)
+      50%      4
+      66%      4
+      75%      4
+      80%      4
+      90%      4
+      95%      5
+      98%      8
+      99%      8
+      100%     21 (longest request)
 
 - name: 'Tuft'
-  result: '77,218'
+  result: '20,824'
   data: |-
-    finished in 90.01s, 77218.33 req/s, 3.54MB/s
-    requests: 4633100 total, 4633100 started, 4633100 done, 4633100 succeeded, 0 failed, 0 errored, 0 timeout
-    status codes: 4630300 2xx, 0 3xx, 0 4xx, 0 5xx
-    traffic: 212.12MB (222421600) total, 52.81MB (55372409) headers (space savings 91.63%), 85.48MB (89633700) data
-                          min         max         mean         sd        +/- sd
-    time for request:    99.47ms    218.24ms    129.50ms     17.04ms    73.23%
-    time for connect:        0us         0us         0us         0us     0.00%
-    time to 1st byte:        0us         0us         0us         0us     0.00%
-    req/s           :     704.93      803.33      772.14       41.34    73.00%
+    Concurrency Level:      100
+    Time taken for tests:   4.802 seconds
+    Complete requests:      100000
+    Failed requests:        0
+    Keep-Alive requests:    100000
+    Total transferred:      15500000 bytes
+    HTML transferred:       1400000 bytes
+    Requests per second:    20823.85 [#/sec] (mean)
+    Time per request:       4.802 [ms] (mean)
+    Time per request:       0.048 [ms] (mean, across all concurrent requests)
+    Transfer rate:          3152.05 [Kbytes/sec] received
+
+    Connection Times (ms)
+                  min  mean[+/-sd] median   max
+    Connect:        0    0   0.1      0       3
+    Processing:     0    5   0.9      5      18
+    Waiting:        0    5   0.9      5      18
+    Total:          0    5   0.9      5      18
+
+    Percentage of the requests served within a certain time (ms)
+      50%      5
+      66%      5
+      75%      5
+      80%      5
+      90%      5
+      95%      6
+      98%      9
+      99%      9`
+     100%     18 (longest request)
 
 - name: 'Fastify'
-  result: '47,137'
+  result: '18,770'
   data: |-
-    finished in 90.01s, 47136.67 req/s, 2.16MB/s
-    requests: 2828200 total, 2828200 started, 2828200 done, 2828200 succeeded, 0 failed, 0 errored, 0 timeout
-    status codes: 2826900 2xx, 0 3xx, 0 4xx, 0 5xx
-    traffic: 129.55MB (135844900) total, 32.14MB (33705791) headers (space savings 91.61%), 51.90MB (54421900) data
-                          min         max         mean         sd        +/- sd
-    time for request:   154.47ms    306.73ms    212.03ms     24.47ms    67.45%
-    time for connect:        0us         0us         0us         0us     0.00%
-    time to 1st byte:        0us         0us         0us         0us     0.00%
-    req/s           :     434.97      496.66      471.34       23.56    49.00%
+    Concurrency Level:      100
+    Time taken for tests:   5.328 seconds
+    Complete requests:      100000
+    Failed requests:        0
+    Keep-Alive requests:    100000
+    Total transferred:      15500000 bytes
+    HTML transferred:       1400000 bytes
+    Requests per second:    18770.46 [#/sec] (mean)
+    Time per request:       5.328 [ms] (mean)
+    Time per request:       0.053 [ms] (mean, across all concurrent requests)
+    Transfer rate:          2841.23 [Kbytes/sec] received
+
+    Connection Times (ms)
+                  min  mean[+/-sd] median   max
+    Connect:        0    0   0.1      0       3
+    Processing:     1    5   1.0      5      22
+    Waiting:        1    5   1.0      5      21
+    Total:          1    5   1.0      5      22
+
+    Percentage of the requests served within a certain time (ms)
+      50%      5
+      66%      5
+      75%      5
+      80%      5
+      90%      6
+      95%      6
+      98%     10
+      99%     10
+     100%     22 (longest request)
 
 - name: 'Koa'
-  result: '34,135'
+  result: '16,554'
   data: |-
-    finished in 90.01s, 34135.00 req/s, 1.57MB/s
-    requests: 2048100 total, 2048100 started, 2048100 done, 2048100 succeeded, 0 failed, 0 errored, 0 timeout
-    status codes: 2048600 2xx, 0 3xx, 0 4xx, 0 5xx
-    traffic: 93.91MB (98468800) total, 23.31MB (24442186) headers (space savings 91.59%), 37.55MB (39375700) data
-                          min         max         mean         sd        +/- sd
-    time for request:   192.35ms    443.51ms    292.88ms     35.93ms    68.17%
-    time for connect:        0us         0us         0us         0us     0.00%
-    time to 1st byte:        0us         0us         0us         0us     0.00%
-    req/s           :     319.96      356.66      341.33       13.56    48.00%
+    Concurrency Level:      100
+    Time taken for tests:   6.041 seconds
+    Complete requests:      100000
+    Failed requests:        0
+    Keep-Alive requests:    100000
+    Total transferred:      15500000 bytes
+    HTML transferred:       1400000 bytes
+    Requests per second:    16553.73 [#/sec] (mean)
+    Time per request:       6.041 [ms] (mean)
+    Time per request:       0.060 [ms] (mean, across all concurrent requests)
+    Transfer rate:          2505.69 [Kbytes/sec] received
+
+    Connection Times (ms)
+                  min  mean[+/-sd] median   max
+    Connect:        0    0   0.1      0       2
+    Processing:     0    6   0.9      6      24
+    Waiting:        0    6   0.9      6      24
+    Total:          0    6   0.9      6      24
+
+    Percentage of the requests served within a certain time (ms)
+      50%      6
+      66%      6
+      75%      6
+      80%      6
+      90%      6
+      95%      7
+      98%      9
+      99%     12
+     100%     24 (longest request)
 
 - name: 'Hapi'
-  result: '29,213'
+  result: '12,851'
   data: |-
-    finished in 90.01s, 29213.33 req/s, 1.39MB/s
-    requests: 1752800 total, 1752800 started, 1752800 done, 1752800 succeeded, 0 failed, 0 errored, 0 timeout
-    status codes: 1752000 2xx, 0 3xx, 0 4xx, 0 5xx
-    traffic: 83.68MB (87748668) total, 24.77MB (25975981) headers (space savings 92.48%), 31.94MB (33493200) data
-                          min         max         mean         sd        +/- sd
-    time for request:   211.65ms    497.77ms    342.22ms     43.28ms    68.31%
-    time for connect:        0us         0us         0us         0us     0.00%
-    time to 1st byte:        0us         0us         0us         0us     0.00%
-    req/s           :     271.63      304.99      292.11       13.20    73.00%
+    Concurrency Level:      100
+    Time taken for tests:   7.781 seconds
+    Complete requests:      100000
+    Failed requests:        0
+    Keep-Alive requests:    100000
+    Total transferred:      20100000 bytes
+    HTML transferred:       1400000 bytes
+    Requests per second:    12851.44 [#/sec] (mean)
+    Time per request:       7.781 [ms] (mean)
+    Time per request:       0.078 [ms] (mean, across all concurrent requests)
+    Transfer rate:          2522.60 [Kbytes/sec] received
+
+    Connection Times (ms)
+                  min  mean[+/-sd] median   max
+    Connect:        0    0   0.1      0       3
+    Processing:     1    8   1.2      8      28
+    Waiting:        1    8   1.2      8      28
+    Total:          1    8   1.2      8      28
+
+    Percentage of the requests served within a certain time (ms)
+      50%      8
+      66%      8
+      75%      8
+      80%      8
+      90%      8
+      95%      9
+      98%     12
+      99%     15
+      100%    28 (longest request)
+
+- name: 'Express'
+  result: '5,965'
+  data: |-
+    Concurrency Level:      100
+    Time taken for tests:   16.766 seconds
+    Complete requests:      100000
+    Failed requests:        0
+    Keep-Alive requests:    100000
+    Total transferred:      21800000 bytes
+    HTML transferred:       1400000 bytes
+    Requests per second:    5964.54 [#/sec] (mean)
+    Time per request:       16.766 [ms] (mean)
+    Time per request:       0.168 [ms] (mean, across all concurrent requests)
+    Transfer rate:          1269.80 [Kbytes/sec] received
+
+    Connection Times (ms)
+                  min  mean[+/-sd] median   max
+    Connect:        0    0   0.0      0       2
+    Processing:     2   17   2.5     16      44
+    Waiting:        2   17   2.5     16      44
+    Total:          2   17   2.5     16      44
+
+    Percentage of the requests served within a certain time (ms)
+      50%     16
+      66%     16
+      75%     16
+      80%     16
+      90%     20
+      95%     21
+      98%     22
+      99%     31
+     100%     44 (longest request)
