--- a/_data/nav/header.yml
+++ b/_data/nav/header.yml
@@ -2,6 +2,8 @@
   link: /
 - name: Docs
   link: /docs/
+- name: Extensions
+  link: /extensions/
 - name: Benchmarks
   link: /benchmarks/
 - name: About
