--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,8 @@ jobs:
       - uses: actions/checkout@v2
         with:
           persist-credentials: false
+      - run: bundle install
+      - run: npm ci
       - run: npm run build
       - uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
