--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,9 @@ jobs:
       - uses: actions/checkout@v2
         with:
           persist-credentials: false
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 2.7
       - run: bundle install
       - run: npm ci
       - run: npm run build
