--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,6 @@
-name: Build and Deploy
+name: GitHub Pages
 on:
   push:
-    branches: [master]
-  pull_request:
     branches: [master]
 jobs:
   build-and-deploy:
@@ -11,12 +9,15 @@ jobs:
       - uses: actions/checkout@v2
         with:
           persist-credentials: false
-      - uses: ruby/setup-ruby@v1
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@v1
         with:
           ruby-version: 2.7
-      - run: bundle install
-      - run: npm ci
-      - run: npm run build
+      - name: Install and build
+        run: |
+          bundle install
+          npm ci
+          npm run build
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
